[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo"
dynamic = ["version"]
description = "TODO"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Andrea Bonomi", email = "andrea.bonomi@gmail.com" }
]
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "codespell",
    "coverage[toml]",
    "ruff",
    "mypy"
]
test = [
    "pytest",
    "pytest-cov",
    "coverage[toml]"
]

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "todo.__version__" }

[tool.setuptools.packages.find]
include = ["todo*"]
exclude = ["ez_setup", "examples", "tests"]

[tool.ruff]
line-length = 132

[tool.ruff.lint]
ignore = [ "E731", "E711" ]

[tool.coverage.run]
source = ["todo"]

[tool.coverage.report]
exclude_lines = [ "# pragma: no cover", "if TYPE_CHECKING:" ]
